# vb-Mifare1K-smartcard

./: .gitignore  README.md  pyproject.toml  pyscard.7z
src/nfc_reader/: card_data.py  cli.py  do_card.py  do_comm.py  do_prompt.py  do_wr.py
tests/: test_card_data.py  test_do_comm.py  test_do_prompt.py  test_import.py
